--- a/app/src/main/res/layout/listview_dining_header.xml
+++ b/app/src/main/res/layout/listview_dining_header.xml
@@ -8,6 +8,7 @@
         android:id="@+id/listview_dining_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold" />
 
