--- a/app/src/main/res/layout/fragment_menu_left.xml
+++ b/app/src/main/res/layout/fragment_menu_left.xml
@@ -93,7 +93,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_settings_white_24dp" />
+                android:src="@drawable/ic_directions_bus_white_24dp" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -101,6 +101,30 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:layout_toRightOf="@id/image_four"
+                android:text="Bus"
+                android:textColor="#f0f0f0"
+                android:textSize="20sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/image_five"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_settings_white_24dp" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/image_five"
                 android:text="Setting"
                 android:textColor="#f0f0f0"
                 android:textSize="20sp" />
