--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="search_view_inset">10dp</dimen>
+    <dimen name="menu_left_tab_icon">30dp</dimen>
+    <dimen name="menu_left_tab_text">12sp</dimen>
 </resources>
