--- a/app/src/main/res/layout/fragment_menu_left.xml
+++ b/app/src/main/res/layout/fragment_menu_left.xml
@@ -1,135 +1,279 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#f7f7f7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00000000" >
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical" >
-
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="0dp"
+            android:background="@drawable/bg_tmp"
+            android:layout_weight="3"
+            android:padding="16dp">
 
-            <ImageView
-                android:id="@+id/image_one"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_local_atm_white_24dp" />
-
-            <TextView
-                android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/image_one"
-                android:text="Coupon"
-                android:textColor="#f0f0f0"
-                android:textSize="20sp" />
-        </RelativeLayout>
+                android:orientation="vertical"
+                android:layout_gravity="start|bottom">
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/pg_launcher2" />
 
-        <RelativeLayout
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="UCSB Student"
+                    android:textColor="#ffffff"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+        </FrameLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="0dp"
+            android:layout_weight="7"
+            android:background="#ffffff"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/image_two"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_map_white_24dp" />
-
-            <TextView
-                android:layout_width="fill_parent"
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/image_two"
-                android:text="Maps"
-                android:textColor="#f0f0f0"
-                android:textSize="20sp" />
-        </RelativeLayout>
+                app:rv_color="@color/material_blue_grey_80">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+                <RelativeLayout
+                android:id="@+id/tab_notification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
-            <ImageView
-                android:id="@+id/image_three"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_restaurant_white_24dp" />
+                <ImageView
+                    android:id="@+id/image_zero"
+                    android:layout_width="@dimen/menu_left_tab_icon"
+                    android:layout_height="@dimen/menu_left_tab_icon"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:src="@drawable/ic_error_outline_grey_500_36dp" />
 
-            <TextView
-                android:layout_width="fill_parent"
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_toRightOf="@id/image_zero"
+                    android:text="Notification"
+                    android:textSize="@dimen/menu_left_tab_text" />
+            </RelativeLayout>
+
+            </com.andexert.library.RippleView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#a3a3a3"
+                android:layout_margin="5dp"
+                />
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/image_three"
-                android:text="Dining"
-                android:textColor="#f0f0f0"
-                android:textSize="20sp" />
-        </RelativeLayout>
+                app:rv_color="@color/material_blue_grey_80">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+                <RelativeLayout
+                    android:id="@+id/tab_coupons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
 
-            <ImageView
-                android:id="@+id/image_four"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_directions_bus_white_24dp" />
+                    <ImageView
+                        android:id="@+id/image_one"
+                        android:layout_width="@dimen/menu_left_tab_icon"
+                        android:layout_height="@dimen/menu_left_tab_icon"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/coupontmp" />
 
-            <TextView
-                android:layout_width="fill_parent"
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@id/image_one"
+                        android:text="Coupon"
+                        android:textSize="@dimen/menu_left_tab_text" />
+                </RelativeLayout>
+
+            </com.andexert.library.RippleView>
+
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/image_four"
-                android:text="Bus"
-                android:textColor="#f0f0f0"
-                android:textSize="20sp" />
-        </RelativeLayout>
+                app:rv_color="@color/material_blue_grey_80">
+                <RelativeLayout
+                    android:id="@+id/tab_maps"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+                    <ImageView
+                        android:id="@+id/image_two"
+                        android:layout_width="@dimen/menu_left_tab_icon"
+                        android:layout_height="@dimen/menu_left_tab_icon"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/maps" />
 
-            <ImageView
-                android:id="@+id/image_five"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_settings_white_24dp" />
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@id/image_two"
+                        android:text="Maps"
+                        android:textSize="@dimen/menu_left_tab_text" />
+                </RelativeLayout>
 
-            <TextView
-                android:layout_width="fill_parent"
+            </com.andexert.library.RippleView>
+
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/image_five"
-                android:text="Setting"
-                android:textColor="#f0f0f0"
-                android:textSize="20sp" />
-        </RelativeLayout>
+                app:rv_color="@color/material_blue_grey_80">
 
-    </LinearLayout>
+                <RelativeLayout
+                    android:id="@+id/tab_dining"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
 
-</RelativeLayout>
+                    <ImageView
+                        android:id="@+id/image_three"
+                        android:layout_width="@dimen/menu_left_tab_icon"
+                        android:layout_height="@dimen/menu_left_tab_icon"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/dining" />
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@id/image_three"
+                        android:text="Dining"
+                        android:textSize="@dimen/menu_left_tab_text" />
+                </RelativeLayout>
+
+            </com.andexert.library.RippleView>
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:rv_color="@color/material_blue_grey_80">
+
+                <RelativeLayout
+                    android:id="@+id/tab_bus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <ImageView
+                        android:id="@+id/image_four"
+                        android:layout_width="@dimen/menu_left_tab_icon"
+                        android:layout_height="@dimen/menu_left_tab_icon"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/ic_directions_bus_grey_500_36dp" />
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@id/image_four"
+                        android:text="Bus"
+                        android:textSize="@dimen/menu_left_tab_text" />
+                </RelativeLayout>
+
+            </com.andexert.library.RippleView>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#a3a3a3"
+                android:layout_margin="5dp"
+                />
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:rv_color="@color/material_blue_grey_80">
+
+                <RelativeLayout
+                    android:id="@+id/tab_settings"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <ImageView
+                        android:id="@+id/image_five"
+                        android:layout_width="@dimen/menu_left_tab_icon"
+                        android:layout_height="@dimen/menu_left_tab_icon"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/cog" />
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@id/image_five"
+                        android:text="Setting"
+                        android:textSize="@dimen/menu_left_tab_text" />
+                </RelativeLayout>
+
+            </com.andexert.library.RippleView>
+
+            <com.andexert.library.RippleView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:rv_color="@color/material_blue_grey_80">
+
+                <RelativeLayout
+                    android:id="@+id/tab_feedback"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <ImageView
+                        android:id="@+id/image_six"
+                        android:layout_width="@dimen/menu_left_tab_icon"
+                        android:layout_height="@dimen/menu_left_tab_icon"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/ic_help_outline_grey_500_36dp" />
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_toRightOf="@id/image_six"
+                        android:text="@string/tab_text_feedback"
+                        android:textSize="@dimen/menu_left_tab_text" />
+                </RelativeLayout>
+
+            </com.andexert.library.RippleView>
+
+        </LinearLayout>
+
+
+</LinearLayout>
